[package]
name = "MCServerControllerRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
futures = "0.3.28"
futures-util = "0.3.28"
no-panic = "0.1.22"
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
sys = "0.0.0"
sysinfo = { version = "0.29.0", features = ["serde"] }
systemstat = "0.2.3"
tokio = { version = "1.28.1", features = ["full", "fs"] }
tokio-tungstenite = "0.19.0"
